--- a/notice.html
+++ b/notice.html
@@ -2,93 +2,473 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>미코팀 | 공지사항</title>
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
+
 <body>
   <header class="site-header">
     <a href="index.html" class="logo">미코팀</a>
-     <!-- 햄버거 버튼 -->
-  <input type="checkbox" id="menu-toggle" />
-  <label for="menu-toggle" class="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-  </label>
+    <!-- 햄버거 버튼 -->
+    <input type="checkbox" id="menu-toggle" />
+    <label for="menu-toggle" class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
 
-  <!-- 네비게이션 -->
-  <nav>
-    <ul class="nav-links">
-      <li><a href="lineup.html">기사 라인업</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle">가격표</a>
-        <ul class="dropdown-menu">
-          <li><a href="price-delegation.html">대리 가격</a></li>
-          <li><a href="price-duo.html">듀오 가격</a></li>
-          <li><a href="price-placement.html">배치 고사</a></li>
-          <li><a href="price-coaching.html">1:1 강의</a></li>
-          <li><a href="price-growth.html">육성</a></li>
-          <li><a href="price-consulting.html">기타서비스</a></li>
-        </ul>
-      </li>
-      <li><a href="certification.html">작업인증</a></li>
-      <li><a href="progress.html">작업현황</a></li>
-      <li><a href="reviews.html">고객후기</a></li>
-      <li><a href="notice.html">공지사항</a></li>
-    </ul>
-  </nav>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const toggle = document.querySelector('.dropdown-toggle');
-      const menu = document.querySelector('.dropdown-menu');
-  
-      toggle.addEventListener('click', (e) => {
-        e.preventDefault();
-        menu.classList.toggle('open');
+    <!-- 네비게이션 -->
+    <nav>
+      <ul class="nav-links">
+        <li><a href="lineup.html">기사 라인업</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle">가격표</a>
+          <ul class="dropdown-menu">
+            <li><a href="price-delegation.html">대리 가격</a></li>
+            <li><a href="price-duo.html">듀오 가격</a></li>
+            <li><a href="price-placement.html">배치 고사</a></li>
+            <li><a href="price-coaching.html">1:1 강의</a></li>
+            <li><a href="price-growth.html">육성</a></li>
+            <li><a href="price-consulting.html">기타서비스</a></li>
+          </ul>
+        </li>
+        <li><a href="certification.html">작업인증</a></li>
+        <li><a href="progress.html">작업현황</a></li>
+        <li><a href="reviews.html">고객후기</a></li>
+        <li><a href="notice.html">공지사항</a></li>
+      </ul>
+    </nav>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const toggle = document.querySelector('.dropdown-toggle');
+        const menu = document.querySelector('.dropdown-menu');
+
+        toggle.addEventListener('click', (e) => {
+          e.preventDefault();
+          menu.classList.toggle('open');
+        });
       });
-    });
-  </script>
+    </script>
     <a href="#" class="contact-btn">
       <img src="img/icons8-카카오-톡-48.png" alt=""> 카톡상담
     </a>
   </header>
 
-  <main>
-    <h1>공지사항</h1>
-    <p>고객후기 관련 내용이 들어갈 영역입니다.</p>
-    <h1>공지사항</h1>
-    <p>고객후기 관련 내용이 들어갈 영역입니다.</p>
-    <h1>공지사항</h1>ㅇ
-  </main>
 
-  <script defer src="script.js"></script>
+  <style>
+
+    .patch-notes h2 {
+      margin: 40px auto 20px auto;
+      color: #fff;
+      width: 80%;
+      text-align: center;
+    }
+
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      margin: 30px 10%;
+      margin-bottom: 100px;
+    }
+
+    .card {
+      background-color: #1c1c1c;
+      color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease-in-out, background-color 0.3s;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      overflow: hidden;
+    }
+
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .card-title {
+      font-size: 16px;
+      font-weight: bold;
+      color: #90c3f9;
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .card-content {
+      font-size: 14px;
+      color: #bdc3c7;
+      margin-top: 5px;
+      text-align: center;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+      background-color: #34495e;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: #2c3e50;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 600px;
+      color: white;
+    }
+
+    .modal-content .close-btn {
+      float: right;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    .pagination {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .pagination button {
+      background-color: #34495e;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      margin: 0 5px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .pagination button:hover {
+      background-color: #1abc9c;
+    }
+
+    .pagination button.active {
+      background-color: #e74c3c;
+    }
+
+    main {
+      background-color: #121212;
+      margin-top: 74px;
+      padding-top: 1px;
+      padding-bottom: 30px;
+    }
+
+
+
+
+
+    
+    .patch-notes h2 {
+      margin: 40px auto 20px auto;
+      /* 위쪽 마진을 늘려 제목을 더 아래로 내립니다 */
+      color: #fff;
+      width: 80%;
+      text-align: center;
+    }
+
+
+
+
+    /* 카드 컨테이너 */
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      /* 3개씩 */
+      gap: 20px;
+      margin: 30px 10%;
+      margin-bottom: 100px;
+    }
+
+    /* 카드 스타일 */
+    .card {
+      background-color: #1c1c1c;
+      /* 다크 테마 배경 */
+      color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease-in-out, background-color 0.3s;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      overflow: hidden;
+    }
+
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .card-title {
+      font-size: 16px;
+      font-weight: bold;
+      color: #90c3f9;
+      /* 밝은 텍스트 */
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .card-content {
+      font-size: 14px;
+      color: #bdc3c7;
+      /* 밝은 회색 텍스트 */
+      margin-top: 5px;
+      text-align: center;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+      background-color: #34495e;
+      /* 카드 hover시 어두운 배경 */
+    }
+
+    /* 상세모달 스타일 */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: #2c3e50;
+      padding: 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 600px;
+      color: white;
+    }
+
+    .modal-content .close-btn {
+      float: right;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    /* 페이지네이션 */
+    .pagination {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .pagination button {
+      background-color: #34495e;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      margin: 0 5px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .pagination button:hover {
+      background-color: #1abc9c;
+    }
+
+    .pagination button.active {
+      background-color: #e74c3c;
+    }
+
+    main {
+      background-color: #121212;
+      margin-top: 74px;
+      padding-top: 1px;
+      padding-bottom: 30px;
+    }
+    
+  </style>
+
+
+<main>
+  <section class="patch-notes">
+    <h2>리그 오브 레전드 패치노트 요약</h2>
+    <div class="cards-container"></div>
+
+    <div class="pagination" id="pagination"></div>
+
+  </section>
+
+  <div class="modal" id="detailModal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <h3 id="modalTitle">패치 상세보기</h3>
+      <div id="modalContent">내용을 로드 중입니다...</div>
+    </div>
+  </div>
+</main>
+
+<!-- ✅ JS 전체 렌더링 영역 (script 내부) -->
+<script>
+  let currentPage = 1;
+  const itemsPerPage = 9;
+  const patchData = [
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '2025년 2월 롤 패치', content: '스트리머 모드 추가, 거친된 삶 효과 nerf', image: 'patch1.jpg', link: 'https://www.example.com/patch1' },
+    { title: '우르프 & 신규 스킨 패치예정', content: '신규 프레스티지 스킨/우르프 모드 업데이트', image: 'patch2.jpg', link: 'https://www.example.com/patch2' },
+    { title: '2025년 첫 패치', content: '주요 버그 수정 및 해결', image: 'patch3.jpg', link: 'https://www.example.com/patch3' },
+    // 추가 데이터 더 넣을 수 있음
+  ];
+
+  function renderCards() {
+    const cardsContainer = document.querySelector('.cards-container');
+    cardsContainer.innerHTML = '';  // 기존 카드 지우기
+
+    const startIndex = (currentPage - 1) * itemsPerPage;
+    const endIndex = Math.min(startIndex + itemsPerPage, patchData.length);
+
+    for (let i = startIndex; i < endIndex; i++) {
+      const card = document.createElement('div');
+      card.classList.add('card');
+
+      const cardContent = `
+        <div class="card-title">${patchData[i].title}</div>
+        <div class="card-content">${patchData[i].content}</div>
+      `;
+
+      if (patchData[i].image) {
+        card.innerHTML = `<img src="img/${patchData[i].image}" alt="패치 이미지 ${i + 1}" />` + cardContent;
+      } else {
+        card.innerHTML = cardContent;
+      }
+
+      card.addEventListener('click', () => openModal(patchData[i].title, patchData[i].content, patchData[i].link));
+      cardsContainer.appendChild(card);
+    }
+
+    renderPagination(patchData.length); // ✅ 페이지네이션 업데이트
+  }
+
+  function renderPagination(totalItems) {
+    const pagination = document.getElementById('pagination');
+    const totalPages = Math.ceil(totalItems / itemsPerPage);
+    pagination.innerHTML = '';
+
+    // 이전 버튼
+    const prevBtn = document.createElement('button');
+    prevBtn.textContent = '‹ 이전';
+    prevBtn.disabled = currentPage === 1;
+    prevBtn.onclick = () => {
+      if (currentPage > 1) {
+        currentPage--;
+        renderCards();
+      }
+    };
+    pagination.appendChild(prevBtn);
+
+    // 페이지 번호
+    for (let i = 1; i <= totalPages; i++) {
+      const btn = document.createElement('button');
+      btn.textContent = i;
+      if (i === currentPage) btn.classList.add('active');
+      btn.onclick = () => {
+        currentPage = i;
+        renderCards();
+      };
+      pagination.appendChild(btn);
+    }
+
+    // 다음 버튼
+    const nextBtn = document.createElement('button');
+    nextBtn.textContent = '다음 ›';
+    nextBtn.disabled = currentPage === totalPages;
+    nextBtn.onclick = () => {
+      if (currentPage < totalPages) {
+        currentPage++;
+        renderCards();
+      }
+    };
+    pagination.appendChild(nextBtn);
+  }
+
+  function openModal(title, content, link) {
+    document.getElementById('modalTitle').textContent = title;
+    document.getElementById('modalContent').innerHTML = `${content}<br><br><a href="${link}" target="_blank" style="color: #1abc9c;">자세히 보기</a>`;
+    document.getElementById('detailModal').style.display = 'flex';
+  }
+
+  document.querySelector('.close-btn').addEventListener('click', () => {
+    document.getElementById('detailModal').style.display = 'none';
+  });
+
+  document.getElementById('detailModal').addEventListener('click', (e) => {
+    if (e.target === document.getElementById('detailModal')) {
+      document.getElementById('detailModal').style.display = 'none';
+    }
+  });
+
+  // ✅ 최초 렌더링
+  renderCards();
+</script>
+
+
+
+
+
 
   <footer class="happyteam-footer">
     <div class="footer-content">
-        <img src="img/햄스터.webp" alt="미코팀 로고" class="footer-logo">
-        <h2>미코팀과 함께 최고의 플레이를 경험하세요!</h2>
-        <p>실력 향상부터 든든한 듀오까지, 미코팀이 여러분과 함께합니다.</p>
-        <div class="footer-links">
-            <a href="#">서비스 이용약관</a> | 
-            <a href="#">개인정보 처리방침</a> | 
-            <a href="#">문의하기</a>
-        </div>
-        <p class="copyright">© 2024 MICO. All rights reserved.</p>
+      <img src="img/햄스터.webp" alt="미코팀 로고" class="footer-logo">
+      <h2>미코팀과 함께 최고의 플레이를 경험하세요!</h2>
+      <p>실력 향상부터 든든한 듀오까지, 미코팀이 여러분과 함께합니다.</p>
+      <div class="footer-links">
+        <a href="#">서비스 이용약관</a> |
+        <a href="#">개인정보 처리방침</a> |
+        <a href="#">문의하기</a>
+      </div>
+      <p class="copyright">© 2024 MICO. All rights reserved.</p>
     </div>
-</footer>
-
-<script>
+  </footer>
+  
+  <script>
     document.addEventListener('DOMContentLoaded', function () {
       const dropdownToggle = document.querySelector('.dropdown-toggle');
       const dropdown = dropdownToggle.closest('.dropdown');
-  
+
       dropdownToggle.addEventListener('click', function (e) {
         e.preventDefault();
         dropdown.classList.toggle('open');
       });
-  
+
       document.addEventListener('click', function (e) {
         if (!dropdown.contains(e.target)) {
           dropdown.classList.remove('open');
@@ -98,4 +478,5 @@
   </script>
 
 </body>
+
 </html>
