--- a/certification.html
+++ b/certification.html
@@ -66,7 +66,7 @@
     <div class="progress-container">
         <div class="progress-gallery">
             <div class="progress-card" data-tier="challenger" data-service="delegation">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">마스터</span>
                     <span class="tag yellow">대리랭크</span>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="progress-card" data-tier="master" data-service="duo">
-                <img src="/img/작업인증/Group 2.png" alt="작업 이미지" />
+                <img src="img/Group 2.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">마스터</span>
                     <span class="tag yellow">대리랭크</span>
@@ -87,7 +87,7 @@
 
 
             <div class="progress-card" data-tier="diamond" data-service="lesson">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">다이아</span>
                     <span class="tag yellow">강의</span>
@@ -98,7 +98,7 @@
 
 
             <div class="progress-card" data-tier="challenger" data-service="duo">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
                     <span class="tag yellow">듀오랭크</span>
@@ -109,7 +109,7 @@
 
 
             <div class="progress-card" data-tier="master" data-service="delegation">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">마스터</span>
                     <span class="tag yellow">대리랭크</span>
@@ -120,7 +120,7 @@
 
 
             <div class="progress-card" data-tier="diamond" data-service="duo">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">다이아</span>
                     <span class="tag yellow">듀오랭크</span>
@@ -131,7 +131,7 @@
 
 
             <div class="progress-card" data-tier="challenger" data-service="delegation">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
                     <span class="tag yellow">대리랭크</span>
@@ -141,7 +141,7 @@
             </div>
 
             <div class="progress-card" data-tier="challenger" data-service="delegation">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
                     <span class="tag yellow">대리랭크</span>
@@ -152,7 +152,7 @@
 
 
             <div class="progress-card" data-tier="challenger" data-service="delegation">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
                     <span class="tag yellow">대리랭크</span>
@@ -162,7 +162,7 @@
             </div>
 
             <div class="progress-card" data-tier="challenger" data-service="delegation">
-                <img src="/img/작업인증/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 1.png" alt="작업 이미지" />
                 <div class="progress-tags">
                     <span class="tag yellow">챌린저</span>
                     <span class="tag yellow">대리랭크</span>
