--- a/certification.html
+++ b/certification.html
@@ -87,12 +87,12 @@
 
 
             <div class="progress-card" data-tier="diamond" data-service="lesson">
-                <img src="img/Group 1.png" alt="작업 이미지" />
+                <img src="img/Group 3.png" alt="작업 이미지" />
                 <div class="progress-tags">
-                    <span class="tag yellow">다이아</span>
-                    <span class="tag yellow">강의</span>
+                    <span class="tag yellow">챌린저</span>
+                    <span class="tag yellow">대리랭크</span>
                 </div>
-                <p class="progress-title">마스터 정글 듀오</p>
+                <p class="progress-title">시즌15 챌린저 원딜</p>
                 <p class="progress-date">2025년 1월 15일</p>
             </div>
 
